# web-apps-streamlit

./: README.py  pyproject.toml
src/: app.py
