[tool.poetry]
name = "web-apps-streamlit"
version = "0.1.0"
description = ""
authors = ["Stephen Herron <stephen.herron@convexin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.34.0"
textblob = "^0.18.0.post0"
spacy = "^3.7.4"
neattext = "^0.1.3"
matplotlib = "^3.9.0"
wordcloud = "^1.9.3"
watchdog = "^4.0.0"
deep-translator = "^1.11.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
